# 2025_kn340_test

./: README.md
.github/: GITHUB_ACTIONS_INTEGRATION.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: add-to-project.yml  python-app.yml
exam/: README.md  main.py  test.py
lab/: .coverage  .coveragerc  1.ipynb  README.md  README2.md  coverage.json  file_module.py  junit.xml  main.py  pyproject.toml
lab/tests/: test_file_module.py  test_main.py
