[project]
name = "lab"
version = "0.1.0"
description = "Learn Testing"
authors = [
    {name = "Bohdan"}
]
requires-python = ">=3.13"
dependencies = [
]


[tool.poetry]
packages = [{include = "lab", from = ".."}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "coverage (>=7.11.3,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
